IGNITE-18737 review fix